14603
```scala
scala> class A[T]
defined class A

scala> class B extends A[Int]
defined class B

scala> class C[T] extends A[T] { def f(t: A[T]) = t match { case x: B => () } }
<console>:6: error: pattern type is incompatible with expected type;
 found   : B
 required: A[T]
       class C[T] extends A[T] { def f(t: A[T]) = t match { case x: B => () } }
                                                                    ^
```
